# kajongg

./: .flatpak-manifest.json  .gitignore  .ignore  .kde-ci.yml  CMakeLists.txt  Changelog  LICENSE  MANIFEST.in  Messages.sh  README  README.packagers  README.windows  background.py  backgroundselector.py  backgroundselector.ui  board.py  compile.sh  config.py  debian.control  games.py  genericdelegates.py  git-pre-commit  hisc-action-games-kajongg-law.svgz  hisc-apps-kajongg.svgz  kajongg.appdata.xml  kajongg.desktop  kmj.desktop  kmj.py  kmjui.rc  make_debian_package  org.kde.kajongg.appdata.xml  org.kde.kajongg.desktop  playerlist.py  playerlist.ui  pylintrc  scoring.py  scoringtest.py  setup.cfg  setup.py  snapcraft.yaml  (+4 more)
bash_completion.d/: kajongg
cmake-modules/: FindGettextMsgfmt.cmake  FindPyQt4.py  FindPyQt5.cmake  FindPyQt5.py  FindTwisted.cmake  FindTwisted.py  KDEPython.cmake  KmjLib.cmake
cmake/modules/: DistMacros.cmake  FindPyKDE4.cmake  FindPyKDE4.py  FindPyQt4.cmake  PythonMacros.cmake
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  sc-actions-games-kajongg-law.svgz  sc-apps-kajongg.svgz
l10n/: de.po  kmj.pot
po/ar/: kajongg.po
po/ar/docs/kajongg/: index.docbook
po/ast/: kajongg.po
po/bg/: kajongg.po
po/bs/: kajongg.po
po/ca/: kajongg.po
po/ca/docs/kajongg/: index.docbook
po/ca@valencia/: kajongg.po
po/cs/: kajongg.po
po/da/: kajongg.po
po/de/: kajongg.po
po/de/docs/kajongg/: index.docbook
po/el/: kajongg.po
po/en_GB/: kajongg.po
po/eo/: kajongg.po
po/es/: kajongg.po
po/es/docs/kajongg/: index.docbook
po/et/: kajongg.po
po/et/docs/kajongg/: index.docbook
po/eu/: kajongg.po
po/fi/: kajongg.po
po/fr/: kajongg.po
po/ga/: kajongg.po
po/gl/: kajongg.po
po/gl/docs/kajongg/: index.docbook
po/he/: kajongg.po
po/hi/: kajongg.po
po/hu/: kajongg.po
po/ia/: kajongg.po
po/is/: kajongg.po
po/it/: kajongg.po
po/it/docs/kajongg/: index.docbook
po/ja/: kajongg.po
po/ka/: kajongg.po
po/kk/: kajongg.po
po/km/: kajongg.po
po/ko/: kajongg.po
po/lt/: kajongg.po
po/mai/: kajongg.po
po/ml/: kajongg.po
po/mr/: kajongg.po
po/nb/: kajongg.po
po/nds/: kajongg.po
po/nl/: kajongg.po
po/nl/docs/kajongg/: index.docbook
po/nn/: kajongg.po
po/pl/: kajongg.po
po/pt/: kajongg.po
po/pt/docs/kajongg/: index.docbook
po/pt_BR/: kajongg.po
po/pt_BR/docs/kajongg/: index.docbook
po/ro/: kajongg.po
po/ru/: kajongg.po
po/sa/: kajongg.po
po/sk/: kajongg.po
po/sl/: kajongg.po
po/sl/docs/kajongg/: index.docbook
po/sr/: kajongg.po
po/sr@ijekavian/: kajongg.po
po/sr@ijekavianlatin/: kajongg.po
po/sr@latin/: kajongg.po
po/sv/: kajongg.po
po/sv/docs/kajongg/: index.docbook
po/tr/: kajongg.po
po/ug/: kajongg.po
po/uk/: kajongg.po
po/uk/docs/kajongg/: index.docbook
po/zh_CN/: kajongg.po
po/zh_TW/: kajongg.po
simpletileset/: simple.desktop
src/: .gitignore  .ignore  about.py  altint.py  animation.py  appversion.py.in  background.py  backgroundselector.py  backgroundselector.ui  board.py  chat.py  check_unused  client.py  common.py  compat.py  config.py  configdialog.py  deferredutil.py  dialogs.py  differ.py  fixdeclmj  game.py  games.py  general.ui  genericdelegates.py  globals.py  guiutil.py  hand.py  handboard.py  humanclient.py  intelligence.py  kajcsv.py  kajongg.py  kajonggdiff  kajonggserver.py  kajonggserver3.py  kajonggtest  kajonggtest.py  kajonggui.rc  kde.py  (+69 more)
src/trunk/: .ignore  background.py  backgroundselector_ui.py  board.py  config.py  games.py  general_ui.py  kmj.e4p  playfield.py  predefined.py  query.py  scoringengine.py  scoringtest.py  tile.py  tilesetselector.ui  tilesetselector_ui.py  util.py
voices/: CMakeLists.txt  NO_TRANSLATIONS_HERE  README  synth
voices/de/: CMakeLists.txt
voices/de/female1/: COPYRIGHT  md5sum
voices/de/female2/: md5sum
voices/de/male1/: COPYRIGHT  md5sum
voices/de/male2/: COPYRIGHT  md5sum
voices/female1/: COPYRIGHT  md5sum
voices/female2/: COPYRIGHT  md5sum
voices/male1/: COPYRIGHT  md5sum
voices/male2/: md5sum
