########### install files ###############

INSTALL( DIRECTORY male1 DESTINATION ${DATA_INSTALL_DIR}/kajongg/voices/ PATTERN .svn EXCLUDE )
INSTALL( DIRECTORY male2 DESTINATION ${DATA_INSTALL_DIR}/kajongg/voices/ PATTERN .svn EXCLUDE )
INSTALL( DIRECTORY female1 DESTINATION ${DATA_INSTALL_DIR}/kajongg/voices/ PATTERN .svn EXCLUDE )
INSTALL( DIRECTORY female2 DESTINATION ${DATA_INSTALL_DIR}/kajongg/voices/ PATTERN .svn EXCLUDE )
